message("========== ADSK USD Plugin ==========")

set(INSTALL_DIR_SUFFIX plugin/adsk)

#==============================================================================
# Packages 
#==============================================================================
add_subdirectory(plugin)
add_subdirectory(scripts)
